--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@ function create() {
 //The update function
 function update() {
 	
+  //Code to make the background move with the mouse
+  console.log(game.input.x);
+  //gameState.bg.x = 
+	
   //Only updates planet stuff if game is on the planet
   if(gameOn === 1){
   	gameState.graphics.clear();
