--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ function create() {
 function update() {
 	
   //Code to make the background move with the mouse
-  console.log(game.input.x);
+  console.log(pointer.x)
+  //console.log(game.input.x);
   //gameState.bg.x = 
 	
   //Only updates planet stuff if game is on the planet
