--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     "start", 
     "images/start button.png"
   );
+  this.load.image(
+    "logo", 
+    "images/start button.png"
+  );
 		    
 }
 
