--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ function create() {
 	//Start button code
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
 	  
+	//The logo being created
+	gameState.logo = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "logo").setScale(0.65);
+	  
 	//The button handling being clicked
   	gameState.startButton.setInteractive()
 	gameState.startButton.on('pointerdown', function() {
