--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@ function update() {
   	//Checks if you fall off the cliff
 	if(window.innerHeight - window.innerHeight / 15 < gameState.player.y && gameOn === 1){
 		this.cameras.main.shake(240, .01, false, function(camera, progress) {/*this.scene.restart(this.levelKey)*/})
-  		/*console.log('Death')
+  		console.log('Death')
 		gameOn = 0
 		console.log(gameOn)
-    		this.scene.restart(this, {}, 'previous')*/
+    		this.scene.restart(this, {}, 'previous')
   	}
   }	
   //Not currently in use
