--- a/index.html
+++ b/index.html
@@ -176,10 +176,6 @@ function update() {
 	if(window.innerHeight - window.innerHeight / 15 < gameState.player.y && gameOn === 1){
 		gameOn = 0
 		this.cameras.main.shake(500, .01, false, function(camera, progress) {this.scene.restart(this, {}, 'previous')})
-  		/*console.log('Death')
-		gameOn = 0
-		console.log(gameOn)
-    		this.scene.restart(this, {}, 'previous')*/
   	}
   }	
   //Not currently in use
@@ -190,6 +186,7 @@ function update() {
   if (gameState.cursors.up.isDown || gameState.wasd.up.isDown) {
 	  if(fuel > 0 && fuelCharge === 100){
 		   gameState.player.setVelocityY(-550);
+		   this.cameras.main.shake(500, .01, false, function(camera, progress) {})
 		   fuel -= 2
 	  }
   }
