--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ function create() {
 function update() {
 	
   //Code to make the background move with the mouse
+  console.log(game.input.mousePointer.x;)
   //console.log(pointer.x)
   //console.log(game.input.x);
   //gameState.bg.x = 
