--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function create() {
 function update() {
 	
   //Code to make the background move with the mouse
-  gameState.bg.x = game.input.mousePointer.x / 70
+  gameState.bg.x = 30 //game.input.mousePointer.x / 70
 	
   //Only updates planet stuff if game is on the planet
   if(gameOn === 1){
