--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function create() {
   if(gameOn === 0){
 	
 	//Background code
-	gameState.bg = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, 'bg');
+	gameState.bg = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, 'bg').setScale(1.5);
 	  
 	//Start button code
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
