--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ function update() {
   if(gameOn === 0){
 	
 	//Code to make the background move with the mouse
-  	gameState.bg.x = window.innerWidth / 2 / game.input.mousePointer.x
+  	gameState.bg.x = window.innerWidth / game.input.mousePointer.x
 	gameState.bg.y = game.input.mousePointer.y / 2
   }
 	
