--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ function create() {
   const platforms = this.physics.add.staticGroup();
   if(gameOn === 1){
  	 platforms.create(window.innerWidth / 2, window.innerHeight - window.innerHeight / 5, "platform");
-	 this.game.world.setBounds(0, 0, window.innerWidth, 900000);
-  	 gameState.player.setCollideWorldBounds(true);
+	 //this.game.world.setBounds(0, 0, window.innerWidth, 900000);
+  	 //gameState.player.setCollideWorldBounds(true);
   }
 	
   //Makes sure the player and planet colide
