--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     "logo", 
     "images/Monster Wars Logo (2).png"
   );
+  this.load.image(
+    "theGun",
+    "images/Laser Gun5.png"
+  )
 		    
 }
 
@@ -96,9 +100,10 @@ function create() {
 	}, this);
   }
   
-  //Loads player if the game is on the planet
+  //Loads player and gun if the game is on the planet
   if(gameOn === 1){
   	gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
+	gameState.gun = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "theGun").setScale(0.5);
   }
   
   //Not in use right now
