--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ function update() {
  	 gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
 	  
 	 //Set the guns position
-	 gameState.gun.x = gameState.player.x
-	 gameState.gun.y = gameState.player.y
+	 gameState.gun.x = gameState.player.x + 50
+	 gameState.gun.y = gameState.player.y + 10
   }
   
   //Makes sure the fuel runs smoothly
