--- a/index.html
+++ b/index.html
@@ -163,9 +163,16 @@ function update() {
   	 gameState.graphics.fillStyle(5656E1, 1);
  	 gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
 	  
-	 //Set the guns position
+	 //Sets the guns position
 	 gameState.gun.x = gameState.player.x + 72
 	 gameState.gun.y = gameState.player.y + 3
+	  
+	 //Sets the guns rotation
+	 var angle = Phaser.Math.angleBetween(
+         gameState.gun.x, gameState.gun.y,
+         game.input.mousePointer.x, game.input.mousePointer.y
+         );
+	 gameState.gun.rotation = angle;
   }
   
   //Makes sure the fuel runs smoothly
