--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ function update() {
 	 //Sets the guns rotation
 	 angle = Math.atan2(game.input.mousePointer.y - gameState.gun.y, game.input.mousePointer.x - gameState.gun.x);
 	 gameState.gun.rotation = angle;
-	 gameState.gun.anchor.set(0, 1);
+	 gameState.gun.anchor.x = 0;
+	 gameState.gun.anchor.y = 1;
   }
   
   //Makes sure the fuel runs smoothly
