--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ function update() {
 	 console.log(angle)
 	 gameState.gun.rotation = angle;
 	 if(-1.6 > angle && angle > -3.1){
-		 gameState.gun.flipX=true
+		 gameState.gun.flipY=true
 		 //gameState.gun.setOrigin(1,1);
 	 } else if(1.6 < angle && angle < 3.1){
-		 gameState.gun.flipX=true
+		 gameState.gun.flipY=true
 		 //gameState.gun.setOrigin(1,1);
 	 } else{
-		 gameState.gun.flipX=false
+		 gameState.gun.flipY=false
 		 gameState.gun.setOrigin(0,1);
 	 }
   }
