--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
   );
   this.load.image(
     "codey",
-    "https://i.ibb.co/2KV1PSv/Monster-Hunter-Squat-Walk2.png"
+    "images/Monster Hunter Squat Walk.gif"
   );
+  //"https://i.ibb.co/2KV1PSv/Monster-Hunter-Squat-Walk2.png"
   this.load.image(
     "codeyup",
-    src='images/Monster Hunter Squat Walk.png'
+    'images/Monster Hunter Squat Walk.png'
   )
   this.load.image(
     "start", 
