--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
     "theGun",
     "images/Laser Gun5.png"
   )
-		    
+  this.load.image(
+    "theBullet",
+    "images/Orange Bullet.png"
+  )	    
 }
 
 //The game state being created
@@ -101,10 +104,11 @@ function create() {
 	}, this);
   }
   
-  //Loads player and gun if the game is on the planet
+  //Loads player, gun, and bullet if the game is on the planet
   if(gameOn === 1){
   	gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
 	gameState.gun = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "theGun").setScale(0.3);
+	gameState.bullet = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "theBullet").setScale(0.3);
   }
   
   //Not in use right now
