--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@ function update() {
 	  
 	 //Sets the guns rotation
 	 angle = Math.atan2(game.input.mousePointer.y - gameState.gun.y, game.input.mousePointer.x - gameState.gun.x);
-	 console.log(angle)
 	 gameState.gun.rotation = angle;
 	 if(-1.6 > angle && angle > -3.15){
 		 gameState.gun.x = gameState.player.x + 65
@@ -194,8 +193,9 @@ function update() {
 	 
 	 //Sets the bullets position
 	 bulletAngle = angle
+	 gameState.bullet.rotation = bulletAngle
 	 if (bulletOnGun === 1){
-	 	 bulletAngle = angle
+	 	 gameState.bullet.rotation = bulletAngle
 	 }
 	 
   }
