--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@ function update() {
 	 	 gameState.bullet.rotation = bulletAngle
 	 }
 	 
-	 gameState.bullet.setVelocity(
-  		 1 * Math.cos(bulletAngle),
-  	 	 1 * Math.sin(bulletAngle)
-	 );
+	 //Makes the bullet move
+	 gameState.bullet.setAngle(bulletAngle)
+	 gameState.bullet.setVelocity(1)
 	 
   }
   
