--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 
     <script>
+	    //Importing Phaser
+	    import * as Phaser from 'phaser';
 	    
 	    //Some variables being set
 	    let fuel = 200
