--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@ function update() {
 	 if (bulletOnGun === 1){
 		 bulletAngle = angle
 	 	 gameState.bullet.rotation = bulletAngle
-		 
+		 gameState.bullet.x = gameState.gun.x + bulletAngle
+		 gameState.bullet.y = gameState.gun.y + bulletAngle
 	 } else{
 		 //
 	 }
