--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@ function update() {
   	 gameState.graphics.fillStyle(5656E1, 1);
  	 gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
 	  
+	 //Sets the bullets position
+	 if (bulletOnGun === 1){
+		 bulletAngle = angle
+	 	 gameState.bullet.rotation = bulletAngle
+		 //gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
+		 //gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
+	 } else{
+		 //
+	 }
+	  
 	 //Sets the guns position
 	 //gameState.gun.x = gameState.player.x + 43
 	 gameState.gun.y = gameState.player.y + 13
@@ -182,26 +192,27 @@ function update() {
 		 gameState.gun.x = gameState.player.x + 65
 		 gameState.gun.flipY=true
 		 gameState.gun.setOrigin(0,0)
+		 
+		 //Sets the bullets position
+		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
+		 
 	 } else if(1.6 < angle && angle < 3.15){
 		 gameState.gun.x = gameState.player.x + 65
 		 gameState.gun.flipY=true
 		 gameState.gun.setOrigin(0,0)
+		 
+		 //Sets the bullets position
+		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
 	 } else{
 		 gameState.gun.x = gameState.player.x + 43
 		 gameState.gun.flipY=false
 		 gameState.gun.setOrigin(0,1);
-	 }
-	 
-	 //Sets the bullets position
-	 if (bulletOnGun === 1){
-		 bulletAngle = angle
-	 	 gameState.bullet.rotation = bulletAngle
-		 //gameState.bullet.x = gameState.gun.x + bulletAngle
+		 
+		 //Sets the bullets position
 		 gameState.bullet.x = gameState.gun.originX * -40 + gameState.gun.x
-		 //gameState.bullet.y = gameState.gun.y + bulletAngle
-		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
-	 } else{
-		 //
+		 gameState.bullet.y = gameState.gun.originY * 40 + gameState.gun.y
 	 }
 	 
 	 //Makes the bullet move
