--- a/index.html
+++ b/index.html
@@ -206,13 +206,14 @@ function update() {
 		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
 		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
 	 } else{
+		 //Gun to the right
 		 gameState.gun.x = gameState.player.x + 43
 		 gameState.gun.flipY=false
 		 gameState.gun.setOrigin(0,1);
 		 
 		 //Sets the bullets position
-		 gameState.bullet.x = gameState.gun.originX * -40 + gameState.gun.x
-		 gameState.bullet.y = gameState.gun.originY * 40 + gameState.gun.y
+		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
 	 }
 	 
 	 //Makes the bullet move
