--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ function update() {
 	 //Sets the bullets position
 	 if (bulletOnGun === 1){
 		 bulletAngle = angle
-	 	 gameState.bullet.rotation = bulletAngle
+	 	 //gameState.bullet.rotation = bulletAngle
 		 //gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
 		 //gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
 	 } else{
