--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@ function update() {
 		 gameState.gun.setOrigin(0,0)
 		 
 		 //Sets the bullets position
-		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
-		 gameState.bullet.y = gameState.gun.originY * -120 + gameState.gun.y
+		 gameState.bullet.x = gameState.gun.originX/* * 40*/ + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY/* * -80*/ + gameState.gun.y
 		 
 	 } else if(1.6 < angle && angle < 3.15){
 		 gameState.gun.x = gameState.player.x + 65
@@ -203,8 +203,8 @@ function update() {
 		 gameState.gun.setOrigin(0,0)
 		 
 		 //Sets the bullets position
-		 gameState.bullet.x = gameState.gun.originX * 40 + gameState.gun.x
-		 gameState.bullet.y = gameState.gun.originY * -120 + gameState.gun.y
+		 gameState.bullet.x = gameState.gun.originX/* * 40*/ + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY/* * -80*/ + gameState.gun.y
 	 } else{
 		 //Gun to the right
 		 gameState.gun.x = gameState.player.x + 43
@@ -212,8 +212,8 @@ function update() {
 		 gameState.gun.setOrigin(0,1);
 		 
 		 //Sets the bullets position
-		 gameState.bullet.x = gameState.gun.originX * 80 + gameState.gun.x
-		 gameState.bullet.y = gameState.gun.originY * -40 + gameState.gun.y
+		 gameState.bullet.x = gameState.gun.originX/* * 80*/ + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY/* * -40*/ + gameState.gun.y
 	 }
 	 
 	 //Makes the bullet move
