--- a/index.html
+++ b/index.html
@@ -171,16 +171,6 @@ function update() {
   	 gameState.graphics.fillStyle(5656E1, 1);
  	 gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
 	  
-	 //Sets the bullets position
-	 if (bulletOnGun === 1){
-		 bulletAngle = angle
-	 	 gameState.bullet.rotation = bulletAngle;
-		 gameState.bullet.x = gameState.gun.originX + gameState.gun.x
-		 gameState.bullet.y = gameState.gun.originY + gameState.gun.y
-	 } else{
-		 //
-	 }
-	  
 	 //Sets the guns position
 	 //gameState.gun.x = gameState.player.x + 43
 	 gameState.gun.y = gameState.player.y + 13
@@ -206,7 +196,15 @@ function update() {
 		 
 	 }
 	 
-	 //Makes the bullet move
+	 //Stuff for the bullets
+	 if (bulletOnGun === 1){
+		 bulletAngle = angle
+	 	 gameState.bullet.rotation = bulletAngle;
+		 gameState.bullet.x = gameState.gun.originX + gameState.gun.x
+		 gameState.bullet.y = gameState.gun.originY + gameState.gun.y
+	 } else{
+		 //
+	 }
 	 
   }
   
