--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@ function update() {
 	 	 gameState.bullet.rotation = bulletAngle;
 		 gameState.bullet.x = gameState.gun.originX + gameState.gun.x
 		 gameState.bullet.y = gameState.gun.originY + gameState.gun.y
+		 if('pointerup'){
+			 console.log('BANG!')
+		 }
 	 } else{
 		 //
 	 }
