--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function update() {
 	 	 gameState.bullet.rotation = bulletAngle;
 		 gameState.bullet.x = gameState.gun.originX + gameState.gun.x
 		 gameState.bullet.y = gameState.gun.originY + gameState.gun.y
-		 if('pointerup'){
+		 if('pointerdown'){
 			 console.log('BANG!')
 		 }
 	 } else{
