--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@ function update() {
 		 radians = angle * (Math.PI / 180);
 		 if(game.input.activePointer.isDown){
 			 console.log('BANG!')
-			 bX = gameState.bullet.x + (Math.cos(angle) * 1);
-			 bY = gameState.bullet.y + (Math.sin(angle) * 1);
-			 gameState.bullet.x += bX;
-			 gameState.bullet.y += bY;
+			 //bX = gameState.bullet.x + (Math.cos(angle) * 1);
+			 //bY = gameState.bullet.y + (Math.sin(angle) * 1);
+			 gameState.bullet.x += gameState.bullet.x + bulletAngle;
+			 gameState.bullet.y += gameState.bullet.y + bulletAngle;
 
 		 }
 	 } else{
