--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ function update() {
 			 console.log('BANG!')
 			 //bX = gameState.bullet.x + (Math.cos(angle) * 1);
 			 //bY = gameState.bullet.y + (Math.sin(angle) * 1);
-			 gameState.bullet.x += gameState.bullet.x + bulletAngle;
-			 gameState.bullet.y += gameState.bullet.y + bulletAngle;
+			 gameState.bullet.x += bulletAngle;
+			 gameState.bullet.y += bulletAngle;
 
 		 }
 	 } else{
