--- a/index.html
+++ b/index.html
@@ -214,12 +214,14 @@ function update() {
 			 console.log('BANG!')
 			 bX = Math.cos(angle) * 2
 			 bY = Math.sin(angle) * 2
-			 gameState.bullet.x += bX + gameState.bullet.x
-			 gameState.bullet.y += bY + gameState.bullet.x
+			 bulletOnGun = 0
+			 //gameState.bullet.x += bX
+			 //gameState.bullet.y += bY
 
 		 }
 	 } else{
-		 //
+		 gameState.bullet.x += bX
+		 gameState.bullet.y += bY
 	 }
 	 
   }
