--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ function update() {
 		 gameState.bullet.x += bX
 		 gameState.bullet.y += bY
 		 bounds1 = gameState.bullet.getBounds();
-		 bounds2 = gameState.bg.getBounds();
+		 bounds2 = platforms.getBounds();
 		 if (bounds1.contains(bounds2.x, bounds2.y) || bounds2.contains(bounds1.x, bounds1.y)){
 			 //bulletOnGun = 1
 			 console.log('TOUCHING')
