--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@ function update() {
 		 bounds1 = gameState.bullet.getBounds();
 		 bounds2 = gameState.platformy.getBounds();
 		 if (bounds1.contains(bounds2.x, bounds2.y) || bounds2.contains(bounds1.x, bounds1.y)){
-			 //bulletOnGun = 1
-			 console.log('TOUCHING')
+			 bulletOnGun = 1
 		 }
 	 }
 	 
