--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   )	    
   this.load.spritesheet(
     'muncher1', 
-    'spriteSheet.png',
+    'images/output-onlinegiftools.png',
     { frameWidth: 100, frameHeight: 100 }
   );
 }
