--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   )	    
   this.load.spritesheet(
     'muncher1', 
-    'images/output-onlinegiftools.png',
+    'images/output-onlinegiftools (1).png',
     { frameWidth: 285, frameHeight: 399 }
   );
 }
